# rag-mental-health

./: .gitignore  PROJECT_REVIEW.md  README.md  UI_App.py  app_enhanced.py  app_streamlit.py  frontend_app.py  pyproject.toml  rag_chat.py  requirements.txt
data/chunks/: pubmed_chunks.json  reddit_chunks.json  who_chunks.json
data/counselchat/: counselchat_qa.json
data/docs/: anxiety.txt
data/embeddings/: all_embeddings.meta.json  all_embeddings_reason.meta.json  pubmed_embeddings.meta.json  pubmed_embeddings.pkl  who_embeddings.meta.json  who_embeddings.pkl
data/evaluations/: evaluation_full_20250804_043705.json  evaluation_full_20250805_125710.json  evaluation_summary_20250804_043705.csv  evaluation_summary_20250805_125710.csv
data/logs/: comparison_20250722_000234.json  rag_interaction_20250708_020947.json  rag_interaction_20250708_131611.json  rag_interaction_20250708_140448.json  rag_interaction_20250708_141425.json  rag_interaction_20250708_150020.json  rag_interaction_20250708_154326.json  rag_interaction_20250715_144232.json  rag_interaction_20250715_145058.json  rag_interaction_20250721_235529.json  rag_interaction_20250721_235930.json  rag_interaction_20250722_000030.json  rag_interaction_20250722_145643.json  rag_interaction_20250722_155722.json  rag_interaction_20250802_052005.json  rag_interaction_20250802_174643.json  rag_interaction_20250802_175258.json  (+27 more)
logs/: eval_counselchat.json  eval_counselchat_eval_results.json
ragenv/: pyvenv.cfg
scripts/: build_index.py  generate_eval_data.py  test_improvements.py
tests/: eval_pipeline.py
(+26 files in other folders)
